style.css
/* STYLESHEET STARTS HERE */

html, body {
  height: 100%;
}

body {
  margin: 0;
  min-width: 320px;
}

* {
  box-sizing: border-box;
}

/* HEADER */
/* ========================================================================= */
header {
  background: #fff;
  position: fixed;
  width: 100%;
  height: 65px;
  z-index: 999;
}

.header-outer-inner {
  display: table;
  width: 100%;

}

.header-inner {
  display: table-row;
  min-width: 100%;
  /*background: yellow;*/
}

.header-logo,
.header-info,
nav {
  display: table-cell;
  /*background: purple;*/
  vertical-align: middle;
  color: #595959;
}

.header-logo {
  width: 5%;
}

.header-info {
  width: 50%;
}

  .header-info-name {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
  }

  .header-info-number {
    /*width: 25%;*/
    height: 50%;
    padding-left: 10px;
    display: none;
  }


@media (min-width: 768px) {
  .header-info-number {
    display: block;
  }
}
/* NAVIGATION */
/* ========================================================================= */
/* nav.css


/* Content Alignment Containers */
/* ========================================================================= */
.page-container {
  width: 100%;
  /*background-color: yellow;*/
  min-height: 100%;
}

.header-content-container {
  max-width: 90%;
  margin: auto;
  padding: 10px 0 10px 0;
  /*position: relative;*/
  /*background: orange;*/
  /*z-index: 2000;*/
}

.content-container {
  /*background: pink;*/
  max-width: 90%;
  margin: auto;
  height: 100%;
}


.body-content-container {
  background: green;
  min-height: 100vh;
}


/* section height setups*/
#fp-section1 {
  height: 80vh;
  width: 100%;
  /*background-color: red;*/
  background: url('assets/mw_hp_background.jpg');

  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: right top;

}

.fp-section1-opacity {
  background-color: rgba(128, 128, 128, 0.15);
  height: 100%;
}

.fp-section-1-text {
  padding-top: 100px;
}


#fp-section2 {
  min-height: 40vh;
  width: 100%;
  background-color: blue;
}

#fp-section3 {
  height: 60vh;
  width: 100%;
  background-color: pink;
}



/* FP Section 2 Styles */
/* ========================================================================= */
.a {
  background: yellow;
}

.b {
  background: pink;
}

.fp-s2-table {
  display: table;
  width: 100%;
  text-align: center;
  background: green;
  min-height: 40vh;
}
.fp-s2-table-row {
  display: table-row;
  text-align: center;
  background: purple;
  min-height: 200px;
  width: 100%;
  display: block;
}

.fp-s2-table-cell {
  display: table-cell;
  text-align: center;
  min-width: 100%;
  display: inline-block;
  /*background: grey;*/
}

/* flex solution to centering content */
/*.fp-s2-content {
  display: flex;
  height: 100%;
  justify-content: center;
  align-items: center;
}*/

/* DEV STYLES */
/* ========================================================================= */

/*.header-logo {
  background: white;
}*/

